Fix Icomoon on ios

--- a/less/style.less
+++ b/less/style.less
@@ -2,14 +2,14 @@
 
 //redefine icomoon font with correct paths
 @font-face {
-    font-family: 'icomoon';
-    src:    url('./fonts/icomoon/fonts/icomoon.eot?ipu2a5');
+    font-family: 'icomoon' !important;
+    src:    url('./fonts/icomoon/fonts/icomoon.eot?ipu2a5') !important;
     src:    url('./fonts/icomoon/fonts/icomoon.eot?ipu2a5#iefix') format('embedded-opentype'),
         url('./fonts/icomoon/fonts/icomoon.ttf?ipu2a5') format('truetype'),
         url('./fonts/icomoon/fonts/icomoon.woff?ipu2a5') format('woff'),
-        url('./fonts/icomoon/fonts/icomoon.svg?ipu2a5#icomoon') format('svg');
-    font-weight: normal;
-    font-style: normal;
+        url('./fonts/icomoon/fonts/icomoon.svg?ipu2a5#icomoon') format('svg') !important;
+    font-weight: normal !important;
+    font-style: normal !important;
 }
 
 @font-face {
